updates and frontend
- New features